--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Passport Auth</title>
-    <link href="css/theme.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/theme.css" />
     <script
       src="https://kit.fontawesome.com/2a43477373.js"
       crossorigin="anonymous"
