--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,33 +1,33 @@
 <div class="row mt-5">
   <div class="col-md-6 m-auto">
     <div class="card card-body">
-      <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Login</h1>
-      <% include './partials/messages' %>
+      <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i> Логин</h1>
+			<%- include('partials/msg') -%>
       <form action="/users/login" method="POST">
         <div class="form-group">
-          <label for="email">Email</label>
+          <label for="email">Почта</label>
           <input
             type="email"
             id="email"
             name="email"
             class="form-control"
-            placeholder="Enter Email"
+            placeholder="Введите почту"
           />
         </div>
         <div class="form-group">
-          <label for="password">Password</label>
+          <label for="password">Пароль</label>
           <input
             type="password"
             id="password"
             name="password"
             class="form-control"
-            placeholder="Enter Password"
+            placeholder="Введите пароль"
           />
         </div>
-        <button type="submit" class="btn btn-primary btn-block">Login</button>
+        <button type="submit" class="btn btn-primary btn-block">Логин</button>
       </form>
       <p class="lead mt-4">
-        No Account? <a href="/users/register">Register</a>
+        Не зарегестрированы? <a href="/users/register">Регистрация</a>
       </p>
     </div>
   </div>
