--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,12 +1,12 @@
 <div class="row mt-5">
   <div class="col-md-6 m-auto">
     <div class="card card-body text-center">
-      <h1><i class="fab fa-node-js fa-3x"></i></h1>
-      <p>Create an account or login</p>
+      <h1><i class="fas fa-snowboarding"></i></h1>
+      <p>Регистрируйтесь или залогиньтесь</p>
       <a href="/users/register" class="btn btn-primary btn-block mb-2"
-        >Register</a
+        >Регистрация</a
       >
-      <a href="/users/login" class="btn btn-secondary btn-block">Login</a>
+      <a href="/users/login" class="btn btn-secondary btn-block">Логин</a>
     </div>
   </div>
 </div>
